[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# see https://godatadriven.com/blog/a-practical-guide-to-setuptools-and-pyproject-toml/
# https://stackoverflow.com/questions/32688688/how-to-write-setup-py-to-include-a-git-repository-as-a-dependency/54701434#54701434

[project]
name = "mplutils"
version = "0.1.0"
authors = [
  { name="Jan Bauer", email="japhba@users.noreply.github.com" },
]
description = ""


dependencies = [
'matplotlib',
'seaborn',
'numpy',
]

[tool.setuptools.packages]
find = {}